@@ -45,7 +45,7 @@
 	&nbsp;
 	<b>{NET_BLOCK_QSIZE}</b> blocks
 	<tr><td nowrap="nowrap">Open Connections:<td><b>{OPEN_CONNS_TOTAL}</b> (<b>{OPEN_CONNS_OUT}</b> outgoing + <b>{OPEN_CONNS_IN}</b> incomming)
-	<tr><td>Extrenal IPs:<td><b>{ONE_EXTERNAL_IP}</b>
+	<tr><td>Extrenal IPs:<td><!--ONE_EXTERNAL_IP-->
 	</table>
 <td valign="top">
 	<h2>Others</h2>
